[package]
name = "rotilities"
version = "0.1.0"
edition = "2024"
description = "A helper crate to easily use Rodio in your projects"
license = "MIT OR Apache-2.0"
keywords = ["rodio","audio","audio playback","sound","easy","simple","utilities","playback","helper"]
categories = ["game-development","multimedia::audio"]
repository = "https://github.com/LordAfterEight/Rotilities"
build = "build.rs"

[dependencies]
rodio = "0.20.1"
